refactor code & add new functionalities